# MyShell

./: CMakeLists.txt  Makefile  README.md  mycat  mycat.c  mycmp  mycmp.c  mycp  mycp.c  myenv  myenv.c  myhead  myhead.c  myls  myls.c  mymkdir  mymkdir.c  mymv  mymv.c  mypwd  mypwd.c  myrm  myrm.c  myrmdir  myrmdir.c  myshell  myshell.c  mysla.c  mysort  mysort.c  mytail  mytail.c  test.c  test2.c
directory2/: mymv.c  test300.c
